[workspace]
[package]
name = "inclusion-program"
version = "1.0.2"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ethereum-lc-core = { path = "../../core", package = "ethereum-lc-core", default-features = false }
sphinx-zkvm = { git = "ssh://git@github.com/lurk-lab/sphinx", tag = "v1.0.0" }

[patch.crates-io]
# Sphinx patch
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8" }
