[workspace]
[package]
name = "inclusion-program"
version = "1.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ethereum-lc-core = { path = "../../core", package = "ethereum-lc-core", default-features = false }
sphinx-zkvm = { git = "https://github.com/argumentcomputer/sphinx", branch = "forward_ports_44" }
sphinx-lib = { git = "https://github.com/argumentcomputer/sphinx", branch = "forward_ports_44" }

[patch.crates-io]
# Sphinx patch
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8" }
