[workspace]
[package]
version = "1.0.1"
name = "longest-chain-program"
edition = "2021"
license = "Apache-2.0"

[dependencies]
sphinx-zkvm = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
kadena-lc-core = { path = "../../core", package = "kadena-lc-core" }

[patch.crates-io]
# Sphinx patch
#tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8" }