[workspace]
[package]
version = "0.0.1"
name = "longest-chain-program"
edition = "2021"
license = "Apache-2.0"

[dependencies]
sphinx-zkvm = { git = "https://github.com/argumentcomputer/sphinx", branch = "forward_ports_48" }
sphinx-lib = { git = "https://github.com/argumentcomputer/sphinx", branch = "forward_ports_48" }
kadena-lc-core = { path = "../../core", package = "kadena-lc-core" }

[patch.crates-io]
# Sphinx patch
sha2 = { git = "https://github.com/argumentcomputer/RustCrypto-hashes", branch = "zkvm" }
blake2 = { git = "https://github.com/argumentcomputer/RustCrypto-hashes", branch = "zkvm" }
