[workspace]
[package]
version = "0.0.1"
name = "spv-program"
edition = "2021"
license = "Apache-2.0"

[dependencies]
sphinx-zkvm = { git = "https://github.com/argumentcomputer/sphinx", branch = "dev" }
kadena-lc-core = { path = "../../core", package = "kadena-lc-core" }

[patch.crates-io]
# Sphinx patch
#tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
sha2 = { git = "https://github.com/argumentcomputer/RustCrypto-hashes", branch = "zkvm" }
blake2 = { git = "https://github.com/argumentcomputer/RustCrypto-hashes", branch = "zkvm" }
