[workspace]
[package]
name = "sig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# LC crates
aptos-lc-core = { path = "../../../core", features = ["aptos"] }
aptos-programs = { path = "../../../aptos-programs" }
reqwest = "=0.11.27"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
wp1-sdk = { git = "ssh://git@github.com/wormhole-foundation/wp1", branch = "dev" }

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }