[workspace]
[package]
version = "0.1.0"
name = "signature-verification-program"
edition = "2021"
license = "Apache-2.0"

[dependencies]
aptos-lc-core = { path = "../../../core", package = "aptos-lc-core", default-features = false }
sphinx-derive = { git = "ssh://git@github.com/lurk-lab/sphinx", branch = "dev" }
sphinx-zkvm = { git = "ssh://git@github.com/lurk-lab/sphinx", branch = "dev" }

[patch.crates-io]
# Sphinx patch
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-v0.10.8" }
